Bug 447287 - Sidebar font in gwenview is smaller than rest of the KDE applications
Summary: Sidebar font in gwenview is smaller than rest of the KDE applications
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (show other bugs)
Version: 21.04.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-20 14:31 UTC by Raghavendra kamath
Modified: 2021-12-20 15:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 22.04
Sentry Crash Report:


Attachments
screenshot showing the font sizes in both dolphin and gwenview (19.64 KB, image/png)
2021-12-20 14:31 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-12-20 14:31:24 UTC
Created attachment 144715 [details]
screenshot showing the font sizes in both dolphin and gwenview

SUMMARY
The font size in gwenview's sidebar is lesser than font size used in Dolphin's or Kate's sidebar. I think the font' sizes should be standard across KDE applications


STEPS TO REPRODUCE
1. Open dolphin and gwenview
2. Open an image in gwenview and open image operation of file tree sidebar
3. compare the font size.

I am attaching a screenshot for your reference.
Comment 1 Nate Graham 2021-12-20 15:50:11 UTC
Git commit c78a66ac91ab87957e790d39ccc3d7a0ef6922a2 by Nate Graham.
Committed on 20/12/2021 at 15:21.
Pushed by ngraham into branch 'master'.

Use normal font size for sidebar text

Using the smallest font here makes it very small, sometimes difficult to
read. It also makes the text  inconsistent with sidebar text in all
other KDE apps. Let's use the normal font size instead to fix these
issues.
FIXED-IN: 22.04

M  +0    -1    app/sidebar.cpp

https://invent.kde.org/graphics/gwenview/commit/c78a66ac91ab87957e790d39ccc3d7a0ef6922a2