Use normal font size for sidebar text

Using the smallest font here makes it very small, sometimes difficult to
read. It also makes the text  inconsistent with sidebar text in all
other KDE apps. Let's use the normal font size instead to fix these
issues.

BUG: 447287
FIXED-IN: 22.04